--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,7 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:2.5.3"
     implementation "androidx.navigation:navigation-dynamic-features-fragment:2.5.3"
     androidTestImplementation "androidx.navigation:navigation-testing:2.5.3"
-    implementation "androidx.navigation:navigation-compose:2.6.0-alpha07"
+//    implementation "androidx.navigation:navigation-compose:2.6.0-alpha07"
 
     //DI hilt
     implementation 'com.google.dagger:hilt-android:2.44'
